--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Vår: April–maj – Festivaler och naturens uppvaknande.
 Sommar: Juni–augusti – Utomhusaktiviteter och midnattssol.
 Höst: September–oktober – Höstfärger och bärplockning.
 Vinter: December–mars – Skidåkning och norrsken.
-För mer reseinspiration, <a href="https://sveriges.codeberg.page/sverigessjoar/https://sveriges.codeberg.page/sverigessjoar/">besök här</a>.</li>
+För mer reseinspiration, <a href="https://sveriges.codeberg.page/sverigessjoar/">besök här</a>.</li>
       </ul>
     </section>
 
